# Microprocessor_code

./: .gitignore  README.md
Arduino/: FAN_CODE.ino  Motor.ino  Swerve.ino  fairyLightControl.ino  tempAndFan.ino  twoPositionEncoder_copy_20250514134650.ino
Arduino/BaseArduino/: BaseArduino.ino
Encoders/: position_encoders.py
MotorControllers/: test.py
MotorControllers/roboclaw/: roboclaw_bareminimum.py  roboclaw_mixedpwm.py  roboclaw_mixedspeedaccel.py  roboclaw_position.py  roboclaw_read.py  roboclaw_readeeprom.py  roboclaw_readversion.py  roboclaw_simplepwm.py  roboclaw_speed.py  roboclaw_speedaccel.py  roboclaw_speedacceldistance.py  roboclaw_speeddistance.py  roboclaw_writeeeprom.py  test.py
MotorControllers/sparkmax_console/: CMakeLists.txt  CMakePresets.json
MotorControllers/sparkmax_console/src/: main.cpp  serial_port.cpp  serial_port.hpp  spark_protocol.hpp
Warrior/: README.md
Warrior/Python/: README.md  find_arduino_ports.py  mock_test.py  serial_bridge.py  serial_protocol.py  test_serial_protocol.py
Warrior/libraries/: README.md
Warrior/libraries/ESP32Servo/: README.md  library.properties
Warrior/libraries/ESP32Servo/src/: ESP32PWM.cpp  ESP32PWM.h  ESP32Servo.cpp
Warrior/libraries/FanControl/: library.properties
Warrior/libraries/FanControl/src/: FanControl.cpp  FanControl.h
Warrior/libraries/MotorControl/src/: MotorControl.cpp  MotorControl.h
Warrior/libraries/RadioLink/src/: RadioLink.cpp  RadioLink.h
Warrior/sketches/00_base/: 00_base.ino
Warrior/sketches/01_swerve/: 01_swerve.ino
Warrior/sketches/02_fan/: 02_fan.ino
(+12 files in other folders)
